# torchkbnufft

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  batched_speed_test.py  build_package.sh  dev-requirements.txt  mypy.ini  profile_torchkbnufft.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_interp.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: environment.yml  requirements.txt  update_all.bash
docs/source/: basic.rst  conf.py  index.rst  modules.rst  performance.rst  torchkbnufft.functional.rst  torchkbnufft.mri.rst  torchkbnufft.nufft.rst  torchkbnufft.rst
docs/source/_templates/: functiontemplate.rst  package.rst_t
notebooks/: Basic Example.ipynb  README.md  SENSE Example.ipynb  Sparse Matrix Example.ipynb  Toeplitz Example.ipynb
tests/: conftest.py  test_adjoints.py  test_dcomp.py  test_interp.py  test_kb_construction.py  test_matadj.py  test_math.py  test_nufft.py  test_pytorch_grad_adj_matching.py  test_pytorch_sparse_grad_adj_matching.py  test_sense_nufft.py  test_sparse_adjoints.py  test_toep.py  test_toeplitz.py
tests/data/: create_old_data.py  interp_data.pkl  nufft_data.pkl
torchkbnufft/: __init__.py  _math.py  kbinterp.py  kbmodule.py  kbnufft.py  math.py  mrisensenufft.py  nufft_utils.py
torchkbnufft/_autograd/: interp.py
torchkbnufft/_nufft/: dcomp.py  fft.py  fft_compatibility.py  fft_functions.py  interp.py  spmat.py  toep.py  toep_functions.py  utils.py
torchkbnufft/functional/: __init__.py  interp.py  kbinterp.py  kbnufft.py  mrisensenufft.py  nufft.py
torchkbnufft/modules/: __init__.py  _kbmodule.py  kbinterp.py  kbmodule.py  kbnufft.py
torchkbnufft/mri/: dcomp_calc.py  mrisensesim.py  sensenufft_functions.py
torchkbnufft/nufft/: fft_compatibility.py  fft_functions.py  interp.py  interp_functions.py  sparse_interp_mat.py  toep_functions.py  utils.py
