[flake8]
max-line-length=88
per-file-ignores=__init__.py:F401
extend-exclude = *brain_challenge*,*2020-08*
extend-ignore = E203, E266, E501

[metadata]
author = torchkbnufft Authors
classifiers =
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
description = A high-level, easy-to-deploy non-uniform Fast Fourier Transform in PyTorch.
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = torchkbnufft
project_urls =
    Homepage = https://torchkbnufft.readthedocs.io/en/stable/
    Source = https://github.com/mmuckley/torchkbnufft

[mypy]

# modules that don't play well with mypy
[mypy-numpy.*,scipy.*]
ignore_missing_imports=True

# directories we're not tracking
[mypy-tests.*]
ignore_missing_imports=True

[options]
install_requires =
    numpy>=1.22.4
    scipy>=1.8.1
    torch>=1.12
packages = find:
python_requires = >=3.8

[options.extras_require]
dev = 
    black==22.10.0
    flake8==5.0.4
    mypy==0.991
    pytest==7.2.0
tests =
    black==22.10.0
    flake8==5.0.4
    mypy==0.991
    numpy==1.23.5
    pytest==7.2.0
    scipy==1.9.3
    torch==1.13.0

[options.packages.find]
exclude = 
    tests*
    notebooks*
    docs*
