[flake8]
max-line-length=88
per-file-ignores=__init__.py:F401
extend-exclude = *brain_challenge*,*2020-08*
extend-ignore = E203, E266, E501

[metadata]
author = torchkbnufft Authors
classifiers =
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
description = A high-level, easy-to-deploy non-uniform Fast Fourier Transform in PyTorch.
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = torchkbnufft
project_urls =
    Homepage = https://torchkbnufft.readthedocs.io/en/stable/
    Source = https://github.com/mmuckley/torchkbnufft

[mypy]

# modules that don't play well with mypy
[mypy-numpy.*,scipy.*]
ignore_missing_imports=True

# directories we're not tracking
[mypy-tests.*]
ignore_missing_imports=True

[options]
install_requires =
    numpy>=1.22.4
    scipy>=1.8.1
    torch>=2.0
packages = find:
python_requires = >=3.10

[options.extras_require]
dev = 
    black==24.10.0
    flake8==6.1.0
    mypy==1.13.0
    pytest==8.3.3
tests =
    black==24.10.0
    flake8==6.1.0
    mypy==1.13.0
    numpy==2.1.3
    pytest==8.3.3
    scipy==1.14.1
    torch==2.5.1
docs =
    sphinx>=3.2.0
    sphinx-rtd-theme>=0.5.1
    sphinxcontrib-katex
    sphinx-autodoc-typehints

[options.packages.find]
exclude = 
    tests*
    notebooks*
    docs*
